--- a/input/organisation.tex
+++ b/input/organisation.tex
@@ -1,39 +1,17 @@
 \section{Introduction}
-Automated Building Drawing is .\\
+Automated Building Drawing is a project for creating two-dimensional drawings (front-view, top-view, side-view etc.) from a three-dimensional model.
 
-\noindent The traditional application of an LMS is in educational institutions. Learning management sys-
-tems have been used for several years to deliver courseware in schools and popularize e-learning. In
-the last few decades, Institutes have been using learning management systems to deliver training
-to internal employees and students. The LMS has become a powerful tool for staffing and training,
-extension schools, and any corporation looking to get a better grasp on the continuing education of
-its workforce. Its impact has been felt mostly outside of traditional education institutions, though
-the same technological and market forces are dramatically changing todays classroom as well.\\
+The main purpose or objective of the project is to make it usable even by the layman. The main target users are the Civil Engineers who want their plans to be printed on the sheets. As of now, they have to create the drawings separately with different views in any CAD software and the 3D model separately. So to automate converting a particular three-dimensional model to the print-ready drawings (with different views), this project will be beneficial. The interface should be easy to use and pretty intuitive. Because the interface is a thing that makes user experience better and to make the user use it.
 
-\noindent Elearning is intended to provide methods or solutions to help our teachers as well as students
-to improve internal processes, save time and increase efficiency. The use of computer systems to execute a variety of operations, such as adding downloadable
-material, online quiz and tests, uploading and giving grades for assignments through internet
-refers to what we call Elearning. The flexible nature of elearning means that we are likely to
-encounter it in everyday life. Some people seek it out in for additional learning opportunities, and
-for career advancement. While others may accidentally stumble upon it when watching a short
-training on their smartphone about their latest application. The old adage still rings true, and
-e-Learning brings with it new dimensions in education.\\
+The Drawing module allows you to put your 3D work on paper. That is, to put views of your models in a 2D window and to insert that window in a drawing, for example a sheet with a border, a title and your logo and finally print that sheet. The drawing may consist of different views like top, front, side and orthographic views.
 
-\noindent Elearning System is a user friendly system which can be used to access all the details about class by logging in. One can easily understand the website and use it for their convenience.
-After login (using their roll number or name), several options for the students and teachers are available. As internet is used by nearly all the students and teachers so it is
-very easy to use the system by the students as well as the teachers. It would be very helpful to the all the important people like
-teachers and students who waste a lot of time and money my giving assignments and tests using pen and paper. Thus, using this system will add great relief in their busy life.
-Along with the users, it is also very helpful for the institute administrator in the sense that they do
-not have to carry all the student records everywhere, because everything will be available online, so they can access any information anytime.
 \section{Problem Formulation}
-Keeping track of daily work and performance of students and by the teachers is not an easy task in the current system, as they are not
-connected to the database in any way. The traditional way of giving students assignments and other class related work is not very successfull in today's era as students mostly copy each other's assignments and other class work. Also the resources are being wasted
-at each institute on manually updating data of students and teachers at various levels. There is no information about the
-previous grades scores or assignments submitted by the students. Also, there is no proper track record recently pass out students. The teachers have to do a lot of pen and paper work on keeping record of students that who have have completed the class work assigned among all the students and who have not completed the work. Also the students have to wait for a significant amount of time after the submission of quizes or assignments to know their grade or marks.\\
 
-\noindent The pen and paper work can be reduced to a great extent by doing work online and saving paper thus
-making it environment friendly. Thus, making it automated process. Lot of time was wasted by the teachers in giving the assignments and later in collecting them from every student. The
-previous process was quite complicated and long process. The students which have not submitted the work given to them can now be easily formulated by using this system.
-Also it will be easy and less time consuming process to give students grades after any quiz they have completed. Now with system, we can easily know the status of students who have completed the given work and who have not.
+The main target users are the Civil Engineers who want their plans to be printed on the sheets. As of now, they have to create the drawings separately with different views in any CAD software and the 3D model separately. So to automate converting a particular three-dimensional model to the print-ready drawings (with different views), this project will be beneficial. So to decrease the efforts, time and cost, it would be really beneficial.
+
+What we can do is to examine thorougly the existing systems if they work good or not. Another thing to do can be to fetch the values from a database (probably Object-orieneted). This will automate the whole process. As there are other tool to put the values of a 3D model into the database. And we can fetch those attributes and values from the database and create the drawings directly. 
+
+First the aim is to make the life easier of a drafter. As if we need to view a model from a different angle and print it's drawing, then it would be a tedious task to do. Hence it can be considered as a further scope of improvements of existing systems.
 
 \section{Objectives}
 \begin{itemize}
@@ -108,7 +86,7 @@ through web.
 \begin{itemize}
 \item Software: Xampp or lampp(in case of ubuntu)
 \item Programming Language: C++, Python, Qt
-\item Database: MySql
+\item Database: MySQL or some Object-oriented database
 \end{itemize}
 
 
