--- a/input/references.tex
+++ b/input/references.tex
@@ -1,8 +1,6 @@
 \begin{thebibliography}{9}
-\bibitem{} Bootstrap, http://getbootstrap.com/getting-started/\#download
-\bibitem{} PHP, http://www.tutorialspoint.com/php/
-\bibitem{} Elearning, http://github.com/navdeep300/Elearning/
+\bibitem{} FreeCAD Code, https://github.com/FreeCAD/FreeCAD
+\bibitem{} FreeCAD forum, http://forum.freecadweb.org
+\bibitem{} Module, http://www.freecadweb.org/wiki/index.php?title=Drawing\_Module
 \bibitem{} Wikipedia, http://en.wikipedia.org/wiki/
-\bibitem{} JQuery, https://jquery.com/download/
-\bibitem{} Leslie Lamport (April 23, 2007). The Writings of Leslie Lamport: LaTeX: A Document Preparation System.
 \end{thebibliography}
