Changes for Minor Project Synopsis

--- a/input/references.tex
+++ b/input/references.tex
@@ -1,6 +1,6 @@
 \begin{thebibliography}{9}
-\bibitem{} FreeCAD Code, https://github.com/FreeCAD/FreeCAD
-\bibitem{} FreeCAD forum, http://forum.freecadweb.org
-\bibitem{} Module, http://www.freecadweb.org/wiki/index.php?title=Drawing\_Module
+\bibitem{} GitHub API, https://developer.github.com/v3/
+\bibitem{} Flask Documentation, http://flask.pocoo.org/
+\bibitem{} React JS Documentation, https://facebook.github.io/react/
 \bibitem{} Wikipedia, http://en.wikipedia.org/wiki/
 \end{thebibliography}
