--- a/input/titlepage.tex
+++ b/input/titlepage.tex
@@ -20,7 +20,7 @@
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
 {Submitted By:}\\
-\textnormal{Navdeep Singh (1243678)\\ Mandeep Singh (1243667)\\}
+\textnormal{Damanpreet Singh (1411247)\\}
 %1243630, 1243624} % Your name
 \end{flushleft}
 \end{minipage}
@@ -34,7 +34,7 @@ CSE Department} % Supervisor's Name
 \end{minipage}\\[2cm]
 \HRule \\[0.4cm]
 
-\textnormal{Department of Computer Science \& Engineering \\
+\textnormal{Department of Information Technology \\
 Guru Nanak Dev Engineering College \\
 Ludhiana 141006}
 }
