--- a/report.tex
+++ b/report.tex
@@ -11,11 +11,11 @@
 \usepackage{verbatim}
 %Options: Sonny, Lenny, Glenn, Conny, Rejne, Bjarne, Bjornstrup
 \usepackage[Glenn]{fncychap}
-\lhead{\large\bfseries  Automated Building Drawings}
+\lhead{\large\bfseries  GitHub Starred Repos}
 \usepackage[left=2.5cm, right=1.5cm, top=2.5cm, bottom=1.5cm]{geometry}
 \pagestyle{fancy}
 \end{print}
-\margins{.5cm}{.5cm}{.5cm}{.5cm}
+\margins{2.5cm}{1.25cm}{1.25cm}{3.5cm}
 \begin{screen}
 
 \renewcommand{\encodingdefault}{T1}
