--- a/input/organisation.tex
+++ b/input/organisation.tex
@@ -1,116 +1,10 @@
-\section{Introduction}
-
-GitHub Starred Repos project discuss the work down in creating a SPA for organizing starred repositories. Single-Page Applications (SPAs) are Web apps that load a single HTML page and dynamically update that page as the user interacts with the app. GitHub provides a feature to bookmark a repository using Starred Button. This project is a Single Page App which will help user view all his starred repositories in organized manner and also he can remove that bookmark from there. I used ReactJS and Flask for this. ReactJS is an open-source JavaScript library used for building dynamic User interfaces, maintained by Facebook. Flask is a micro web framework written in Python. It has a lot of extensions which can be used for various operations.
-This project also uses Bootstrap. Bootstrap is a free and open-source front-end web framework for designing websites and web applications. JQuery is also used along with ReactJS and Bootstrap.
-Furthermore, this project involves using GitHub API (Application program interface) for fetching user’s data. API is a set of routines, protocols, and tools for building software applications. Many companies provide their APIs for programming Graphical User Interfaces (GUI).
-Also, this project is completely open source and the entire code is available to the user as and when required. Also, eﬀorts were made to use mostly open-sourced tools and softwares.
 
 
-The term Bookmarks refers to saved shortcut that directs to a particular item. We use bookmarks in our daily life to record a lot of things for easy access. Bookmarks provide easy and quick access to a particular record( address, ﬁles etc ). Sometimes, it just seems like there are not enough hours in the day to get all your work done. This can especially seem true in oﬃces, where every operation is a time-consuming task. Here in our daily lifes we use diﬀenent methods to bookmark things, from using thin markers made from cardboard for bookmarking a speciﬁc page in a book to using bookmarking tool in our computers to bookmark a certain report, webpage or some repository. Bookmarks are now being used by many corporations to achieve maximum output
-
-Automated Building Drawing is a project for creating two-dimensional drawings (front-view, top-view, side-view etc.) from a three-dimensional model.
-
-The main purpose or objective of the project is to make it usable even by the layman. The main target users are the Civil Engineers who want their plans to be printed on the sheets. As of now, they have to create the drawings separately with different views in any CAD software and the 3D model separately. So to automate converting a particular three-dimensional model to the print-ready drawings (with different views), this project will be beneficial. The interface should be easy to use and pretty intuitive. Because the interface is a thing that makes user experience better and to make the user use it.
-
-The Drawing module allows you to put your 3D work on paper. That is, to put views of your models in a 2D window and to insert that window in a drawing, for example a sheet with a border, a title and your logo and finally print that sheet. The drawing may consist of different views like top, front, side and orthographic views.
-
-\section{Problem Formulation}
-
-The main target users are the developers who use GitHub to collaborate. As of now, they have the feature to start a repository( Bookmakark repository ) on GitHub. But the problem is in the management of these starred repositories. So to keep track of user's comments and tags about his starred repositories, this project will be beneficial. It would help to reduce the time and will improve productivity.
-
-We can also sort the repository list using different user defined tags which will then be stored in database for further use. Also, it is a Single Page Web Application which means it is very user friendly and it updates in real time. No additional Software need to be installed for this, just a modern web browser is enough. 
-
-
-First the aim is to make the life easier of a drafter. As if we need to view a model from a different angle and print it's drawing, then it would be a tedious task to do. Hence it can be considered as a further scope of improvements of existing systems.
-
-\section{Objectives}
+\section{OBJECTIVES}
 \begin{itemize}
-\item To put all of user's starred repositories in organized manner.
-\item Provide features to user to add comments and tags to the starred repositories.
+\item To handle the manual handling and even the workload of the employees of the company by introducing a change in the existing many software system to a single software implementation.
+\item To save time and cost of the employees and company by providing information very efficiently and easily.
+\item To have a proper record of the vehicles coming to toll plaza and having a list and record of that vehicles.
+\item To provide a system with proper recovery of data, in case lost, through a proper backup     provided.
+\item To provide the head with the basic utilities like file choosers, web browser, account settings and backup within the system for the proficient work management of the company.
 \end{itemize}
-
-
-\section{Feasibility Analysis}
-Feasibility analysis aims to uncover the strengths and weaknesses of 
-a project. In its simplest term, the two criteria to judge feasibility 
-are cost required and value to be attained. As such, a well-designed 
-feasibility analysis should provide a historical background of the 
-project, description of the project or service, details of the 
-operations and management and legal requirements. Generally, feasibility 
-analysis precedes technical development and project implementation. 
-There is some feasibility factors by which we can determine that 
-project is feasible or not:
-\begin{itemize}
-\item {\bf{Technical feasibility}}: Technological feasibility is carried 
-out to determine whether the project has the capability, in terms of 
-software, hardware, personnel to handle and fulfill the user 
-requirements. The assessment is based on an outline design of system 
-requirements in terms of Input, Processes, Output and Procedures. GitHub Starred Repos is technically feasible as it is built up in Open 
-Source Environment and thus it can be run on any Open Source plateform.
-\item {\bf{Economic feasibility}}: Economic analysis is the most 
-frequently used method to determine the cost/benefit factor for 
-evaluating the effectiveness of a new system. In this analysis we 
-determine whether the benefit is gained according to the cost invested 
-to develop the project or not. If benefits outweigh costs, only then 
-the decision is made to design and implement the system. It is 
-important to identify cost and benefit factors, which can be categorized 
-as follows:
-\begin{enumerate}
-\item Development costs.
-\item Operating costs.
-\end{enumerate}
-GitHub Starred Repos is also Economically feasible with 0 Development 
-and Operating Charges as it is developed using open source technologies and the software is operated on Open 
-Source platform.
-\item {\bf {Legal feasibility}}: In this type of feasibility study, we 
-basically determine whether the project conflicts with legal 
-requirements, e.g. a data processing system must comply with the local 
-Data Protection Acts. But this software has been developed with properly Licensed technologies. 
-Thus is the legal process.
-\item {\bf{Operational feasibility}}: Operational feasibility is a measure 
-of how well a project solves the problems, and takes advantage of the 
-opportunities identified during scope definition and how it satisfies 
-the requirements identified in the requirements analysis phase of system 
-development. All the operations performed in the system are very quick 
-and satisfy all the requirements.
-\item {\bf{Behaviour Feasibility}}: In this feasibility, we check about the 
-behavior of the proposed system software i.e. whether the proposed 
-project is user friendly or not, whether users can use the project 
-without any training because of the user friendliness or not. GitHub Starred Repos is very user friendly as its users interact with it through web.
-\end{itemize}
-
-
-
-\section{Methodology/Planning of work}
-\begin{itemize}
-\item Studying the current existing system and its problems.
-\item Proposing solutions for various problems in the existing system.
-\item Implementing the solutions and keeping in     mind the benefits of the GitHub Starred Repos in organizing bookmarked repositories.
-\end{itemize}
-
-
-
-
-\section{Facilities required for proposed work}
-\subsection{Hardware Requirements}
-\begin{itemize}
-\item Operating System: ubuntu 12.04 or windows 7/10
-\item Processor Speed: 512KHz or more
-\item RAM: Minimum 256MB
-\end{itemize}
-\subsection{Software Requirements}
-\begin{itemize}
-\item Web Browser: IE9+, Google Chrome, Mozilla Firefox
-\item Programming Language: Python, JavaScript, HTML
-\item Database: MySQL or some Object-oriented database
-\end{itemize}
-
-
-
-
-
-
-
-
-
-
