--- a/report.tex
+++ b/report.tex
@@ -11,7 +11,7 @@
 \usepackage{verbatim}
 %Options: Sonny, Lenny, Glenn, Conny, Rejne, Bjarne, Bjornstrup
 \usepackage[Glenn]{fncychap}
-\lhead{\large\bfseries  GitHub Starred Repos}
+\lhead{\large\bfseries  A.F.M.}
 \usepackage[left=2.5cm, right=1.5cm, top=2.5cm, bottom=1.5cm]{geometry}
 \pagestyle{fancy}
 \end{print}
@@ -39,36 +39,42 @@
 \pagenumbering{Roman}
 \cfoot{\thepage}
 
-%\input{input/abstract.tex}
+%\input{input/ab.tex}
 %\newpage
 
 %\input{input/acknowledgement.tex}
+%\input{input/ack.tex}
 
-\newpage
-%\tableofcontents
 %\newpage
-%\listoffigures
+%\tableofcontents
 \newpage
+%\listoffigures
+%\newpage
+%\listoftables
+%\newpage
 
 \pagenumbering{arabic}
 \cfoot{\thepage}
 
 \newpage
-\chapter{Project Synopsis}
+
+%\chapter{ACKNOWLEDGEMENT}
+
+%\chapter{AUTOMOBILE FINANCE MANAGEMENT}
 \input{input/organisation.tex}
-%\newpage
-%\chapter{\LaTeX}
-%\input{input/latex.tex}
-%\chapter{Introduction To Project}
-%\input{input/project-preview.tex}
-%\chapter{Product Design}
-%\input{input/design.tex}
-%\chapter{Technologies Used}
-%\input{input/techno-used.tex}
-%\chapter{Development and Implementation}
-%\input{input/implement.tex}
+\newpage
+%\chapter{WORKED CARRIED OUT}
+\input{input/latex.tex}
+%\chapter{TABLE STRUCTURES}
+%\input{input/STR.tex}
+%\chapter{PAGES}
+\input{input/sc.tex}
+%\chapter{SCREENSHOTS}
+%\input{input/tooo.tex}
+%\chapter{CONCLUSION AND FUTURE SCOPE}
+\input{input/lol.tex}
 %\chapter{Conclusion and Future Scope}
 %\input{input/conclusion.tex}
-\input{input/references.tex}
+%\input{input/references.tex}
 \end{document}
 
