--- a/input/titlepage.tex
+++ b/input/titlepage.tex
@@ -3,38 +3,29 @@
 \newcommand{\supervisor}{\vskip 2cm}
 \newcommand{\stamp}{\vskip 2.5cm}
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
-\newcommand{\projecttitle}{\Huge \bf{Automated Building Drawings}\vskip 0.5in}
+\newcommand{\projecttitle}{\Huge \bf{AUTOMOBILE FINANCE MANAGEMENT}\vskip 0.5in}
 \newcommand{\tab}[1]{\hspace{.4\textwidth}\rlap{#1}}
 \newcommand{\itab}[1]{\hspace{.05\textwidth}\rlap{#1}}
 \newcommand{\logo}[1]{\includegraphics[scale=0.7]{#1}}
 \newcommand{\submitted}{
 \vskip 0.4in
-\textnormal\bf{Bachelor of Technology}\\
+\textnormal\bf{BACHELOR OF TECHNOLOGY}\\
 
-\textnormal{(Computer Science and Engineering)\\
+\textnormal{(Information Technology)\\
 }
+\vskip 0.4in
+\textnormal{SUBMITTED BY}\\
+\textnormal{BIRJOT SINGH (1411246)}\\ 
+\textnormal{NIKHIL SARNA (1411291)}\\
 \vskip 2.5cm
 %\image{0.7}{images/gne.jpg}{}
 \logo{images/gne.jpg}
 \vskip 3.0cm
-\begin{minipage}{0.4\textwidth}
-\begin{flushleft} \large
-{Submitted By:}\\
-\textnormal{Damanpreet Singh (1411247)\\}
-%1243630, 1243624} % Your name
-\end{flushleft}
-\end{minipage}
-~
-\begin{minipage}{0.4\textwidth}
-\begin{flushright} \large
-{Submitted To:} \\
-\textnormal{Sumeet Kaur Sehra\\                                                                                                                          
-CSE Department} % Supervisor's Name
-\end{flushright}
-\end{minipage}\\[2cm]
-\HRule \\[0.4cm]
 
-\textnormal{Department of Information Technology \\
+                                                                                                                      
+
+
+\LARGE  \bf{Department of Information Technology \\
 Guru Nanak Dev Engineering College \\
 Ludhiana 141006}
 }
@@ -42,7 +33,8 @@ Ludhiana 141006}
 
 \newcommand{\pagetitle}{\begin{center}
 \projecttitle
-\Large\textbf{Project Synopsis}\\
+\Large\textbf{SYNOPSIS}\\
+\textnormal{(MINOR PROJECT)}
 \submitted
 \vskip 1cm
 
